add: delete a image from product
